2013-09-06  Dario Rodriguez <dario@artica.es>

	* operation/leads/lead_pipeline.php: Added missing file
	from new lead pipeline view :-)

2013-09-06  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	operation/leads/lead_statistics.php,
	operation/leads/lead.php,
 	operation/leads/lead_detail.php,
 	operation/side_menu.php: Created a new pipeline view for leads
 	and modified some old views to adapt them to the new application's 
 	workflow.

2013-09-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/operation/incident.php: Small fixes on the function
	"insertIncident".
	
	* operation/companies/company_detail.php,
	  operation/contacts/contact_detail.php,
	  operation/contracts/contract_detail.php,
	  operation/invoices/invoice_detail.php,
	  operation/leads/lead_detail.php: Fixed the CSV exporting.
	
	* operation/incidents/incident_detail.php: Now the actual user's
	name appears in the "Closed By" input when the user selects the
	option close and some elements pulsate.
	
	* operation/leads/lead_detail.php: Now the lead form is loaded
	when a lead is created or updated instead of the lead listing.
	Fixed the filters "progress major than" and "progress minor than".
	Fixed an error related with searches by product. Now is possible
	to search a lead by its id from the "search text".
	
2013-09-06  Sancho Lerena <slerena@artica.es>

	* include/functions_graph.php: Fixes on how hbar graphs
	are rendered (as used in project reports).

	* include/graphs/functions_pchart.php: Small fixes and layout
	changes on graphs for hbar (project reports).

	* operation/search.php: Added link to WO report and Incident report
	on user search, very useful !

	* operation/user_report/report_full.php: LOTS of fixes, simplified
	operation, added a few tips on usage. 

	* include/functions.php: Improved combo and "translation" of 
	priorities. Fixed function which return graph on priority code.

	* operation/incidents/incident_search_logic.php: Added count