@@ -450,3 +450,10 @@ INSERT INTO tlead_progress (id,name) VALUES
 (200,'Closed successfully');
 
 UPDATE tlead_progress SET `id`=0 WHERE `id`=1;
+
+/* 06/09/2013  */
+UPDATE tlead SET progress=20 WHERE progress=10;
+UPDATE tlead SET progress=40 WHERE progress=30;
+UPDATE tlead SET progress=60 WHERE progress=50;
+UPDATE tlead SET progress=80 WHERE progress=70;
+UPDATE tlead SET progress=80 WHERE progress=90;
